--- a/shop-project/src/style.css
+++ b/shop-project/src/style.css
@@ -1,3 +1,11 @@
 @import "tailwindcss";
 
 
+@theme {
+    --color-primary: #22223b;
+    --color-second: #9a8c98;
+    --color-third: #c9ada7;
+    --color-gray: #4a4e69;
+    --color-light: #f2e9e4;
+}
+
